Creating get jwt documentation
